Update: language files

--- a/assets/languages/wc1c-ru_RU.po
+++ b/assets/languages/wc1c-ru_RU.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WC1C > integration of WooCommerce with 1C products "
 "(different configurations)\n"
-"POT-Creation-Date: 2022-06-20 01:57+0300\n"
-"PO-Revision-Date: 2022-06-20 02:06+0300\n"
+"POT-Creation-Date: 2022-07-03 21:27+0300\n"
+"PO-Revision-Date: 2022-07-03 21:29+0300\n"
 "Last-Translator: \n"
 "Language-Team: https://wc1c.info\n"
 "Language: ru_RU\n"
@@ -100,6 +100,26 @@ msgstr "Последняя страница"
 msgid "Select All"
 msgstr "Выбрать все"
 
+#: src/Activation.php:28
+msgid ""
+"WC1C successfully activated. You have made the right choice to integrate the "
+"site with 1C (plugin number one)!"
+msgstr ""
+"WC1C успешно активирован. Вы сделали правильный выбор в пользу интеграции "
+"сайта с 1С (плагин номер один)!"
+
+#: src/Activation.php:32
+msgid ""
+"The basic plugin setup has not been done yet, so you can proceed to the "
+"setup, which takes no more than 5 minutes."
+msgstr ""
+"Базовая настройка плагина еще не сделана, поэтому можно переходить к "
+"настройке, которая занимает не более 5 минут."
+
+#: src/Activation.php:34
+msgid "Go to setting."
+msgstr "Перейти к настройке."
+
 #: src/Admin.php:96 src/Admin.php:97 views/header.php:3
 msgid "Integration with 1C"
 msgstr "Интеграция с 1С"
@@ -121,7 +141,7 @@ msgstr "Настройки"
 msgid "Extensions"
 msgstr "Расширения"
 
-#: src/Admin.php:259 src/Admin/Settings/MainForm.php:243
+#: src/Admin.php:259 src/Admin/Settings/MainForm.php:244
 msgid "never"
 msgstr "никогда"
 
@@ -216,7 +236,7 @@ msgid "Base information"
 msgstr "Базовая информация"
 
 #: src/Admin/Configurations/AllTable.php:266
-#: src/Admin/Settings/MainForm.php:174
+#: src/Admin/Settings/MainForm.php:175
 msgid "Status"
 msgstr "Состояние"
 
@@ -833,10 +853,18 @@ msgid "Support"
 msgstr "Поддержка"
 
 #: src/Admin/Settings/MainForm.php:163
+msgid ""
+"If there is no code to support, bug fixes and plugin updates with new "
+"features will not be released."
+msgstr ""
+"Если нет кода для поддержки, исправления ошибок и обновления плагина с "
+"новыми функциями выпускаться не будут."
+
+#: src/Admin/Settings/MainForm.php:164
 msgid "The code can be obtained from the plugin website:"
 msgstr "Код можно получить на сайте плагина:"
 
-#: src/Admin/Settings/MainForm.php:166
+#: src/Admin/Settings/MainForm.php:167
 msgid ""
 "Users with active codes participate in the development of integration with "
 "1C, they have a connection with developers and other additional features."
@@ -844,18 +872,18 @@ msgstr ""
 "Пользователи с активными кодами участвуют в улучшении интеграции с 1С, у них "
 "есть связь с разработчиками и другие дополнительные возможности."
 
-#: src/Admin/Settings/MainForm.php:177
+#: src/Admin/Settings/MainForm.php:178
 msgid ""
 "Support code activated. To activate another code, you can enter it again."
 msgstr ""
 "Код поддержки активирован. Чтобы активировать другой код, можно ввести "
 "другой код и активировать."
 
-#: src/Admin/Settings/MainForm.php:184
+#: src/Admin/Settings/MainForm.php:185
 msgid "Code for activation"
 msgstr "Код для активации"
 
-#: src/Admin/Settings/MainForm.php:190
+#: src/Admin/Settings/MainForm.php:191
 msgid ""
 "If enter the correct code, the current environment will be activated. Enter "
 "the code only on the actual workstation."
@@ -863,35 +891,35 @@ msgstr ""
 "Если ввести правильный код, текущее окружение будет активировано. Вводите "
 "код только на реальном рабочем сервере."
 
-#: src/Admin/Settings/MainForm.php:191
+#: src/Admin/Settings/MainForm.php:192
 msgid "Current license API status:"
 msgstr "Текущий статус сервера лицензий:"
 
-#: src/Admin/Settings/MainForm.php:253
+#: src/Admin/Settings/MainForm.php:254
 msgid "Code ID"
 msgstr "Идентификатор кода"
 
-#: src/Admin/Settings/MainForm.php:255
+#: src/Admin/Settings/MainForm.php:256
 msgid "expires:"
 msgstr "истекает:"
 
-#: src/Admin/Settings/MainForm.php:257
+#: src/Admin/Settings/MainForm.php:258
 msgid "Instance ID"
 msgstr "Идентификатор экземпляра"
 
-#: src/Admin/Settings/MainForm.php:259
+#: src/Admin/Settings/MainForm.php:260
 msgid "Domain"
 msgstr "Доменное имя"
 
-#: src/Admin/Settings/MainForm.php:313
+#: src/Admin/Settings/MainForm.php:314
 msgid "Activate"
 msgstr "Активировать"
 
-#: src/Admin/Settings/MainForm.php:345
+#: src/Admin/Settings/MainForm.php:346
 msgid "The support code is invalid. Enter the correct code."
 msgstr "Код поддержки недействителен. Введите правильный код."
 
-#: src/Admin/Settings/MainForm.php:378
+#: src/Admin/Settings/MainForm.php:379
 msgid "Support code activated successfully. Reload the page to display."
 msgstr ""
 "Код поддержки успешно активирован. Перезагрузите страницу для отображения."
@@ -3277,94 +3305,6 @@ msgstr "Удаленные"
 msgid "%s <span class=\"time\">in: %s</span>"
 msgstr "%s <span class=\"time\">в: %s</span>"
 
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:311
-#, php-format
-msgctxt "Product Attribute"
-msgid "Product %s"
-msgstr "Продукт %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:314
-#, php-format
-msgid "Search %s"
-msgstr "Найти %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:316
-#, php-format
-msgid "All %s"
-msgstr "Все %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:318
-#, php-format
-msgid "Parent %s"
-msgstr "Родитель %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:320
-#, php-format
-msgid "Parent %s:"
-msgstr "Родитель %s:"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:322
-#, php-format
-msgid "Edit %s"
-msgstr "Редактировать %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:324
-#, php-format
-msgid "Update %s"
-msgstr "Обновить %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:326
-#, php-format
-msgid "Add new %s"
-msgstr "Добавить новый %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:328
-#, php-format
-msgid "New %s"
-msgstr "Новый %s"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:330
-#, php-format
-msgid "No &quot;%s&quot; found"
-msgstr "Не &quot;%s&quot; найден"
-
-#. translators: %s: attribute name
-#: src/Wc/Entities/Attribute.php:332
-#, php-format
-msgid "&larr; Back to \"%s\" attributes"
-msgstr "&larr; Вернутся к \"%s\" атрибутам"
-
-#: src/Wc/Storages/AttributesStorage.php:41
-#: src/Wc/Storages/CategoriesStorage.php:40
-msgid "Could not insert into the database."
-msgstr "Не удалось вставить в базу данных."
-
-#: src/Wc/Storages/AttributesStorage.php:70
-msgid "Invalid attribute."
-msgstr "Недопустимый атрибут."
-
-#: src/Wc/Storages/AttributesStorage.php:79
-msgid "Invalid taxonomy."
-msgstr "Неверная таксономия."
-
-#: src/Wc/Storages/CategoriesStorage.php:72
-msgid "Invalid category."
-msgstr "Не валидная категория."
-
-#: src/Wc/Storages/ImagesStorage.php:70
-msgid "Invalid image."
-msgstr "Недопустимое изображение."
-
 #: vendor/digiom/notices-wp/src/Types/ErrorNotice.php:49
 #: vendor/digiom/notices-wp/src/Types/InfoNotice.php:47
 #: vendor/digiom/notices-wp/src/Types/SuccessNotice.php:49
@@ -3372,6 +3312,94 @@ msgstr "Недопустимое изображение."
 #: vendor/digiom/notices-wp/src/Types/WarningNotice.php:49
 msgid "Close"
 msgstr "Закрыть"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:311
+#, php-format
+msgctxt "Product Attribute"
+msgid "Product %s"
+msgstr "Продукт %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:314
+#, php-format
+msgid "Search %s"
+msgstr "Найти %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:316
+#, php-format
+msgid "All %s"
+msgstr "Все %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:318
+#, php-format
+msgid "Parent %s"
+msgstr "Родитель %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:320
+#, php-format
+msgid "Parent %s:"
+msgstr "Родитель %s:"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:322
+#, php-format
+msgid "Edit %s"
+msgstr "Редактировать %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:324
+#, php-format
+msgid "Update %s"
+msgstr "Обновить %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:326
+#, php-format
+msgid "Add new %s"
+msgstr "Добавить новый %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:328
+#, php-format
+msgid "New %s"
+msgstr "Новый %s"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:330
+#, php-format
+msgid "No &quot;%s&quot; found"
+msgstr "Не &quot;%s&quot; найден"
+
+#. translators: %s: attribute name
+#: vendor/wc1c/wc/src/Entities/Attribute.php:332
+#, php-format
+msgid "&larr; Back to \"%s\" attributes"
+msgstr "&larr; Вернутся к \"%s\" атрибутам"
+
+#: vendor/wc1c/wc/src/Storages/AttributesStorage.php:41
+#: vendor/wc1c/wc/src/Storages/CategoriesStorage.php:40
+msgid "Could not insert into the database."
+msgstr "Не удалось вставить в базу данных."
+
+#: vendor/wc1c/wc/src/Storages/AttributesStorage.php:70
+msgid "Invalid attribute."
+msgstr "Недопустимый атрибут."
+
+#: vendor/wc1c/wc/src/Storages/AttributesStorage.php:79
+msgid "Invalid taxonomy."
+msgstr "Неверная таксономия."
+
+#: vendor/wc1c/wc/src/Storages/CategoriesStorage.php:72
+msgid "Invalid category."
+msgstr "Не валидная категория."
+
+#: vendor/wc1c/wc/src/Storages/ImagesStorage.php:70
+msgid "Invalid image."
+msgstr "Недопустимое изображение."
 
 #: views/configurations/create.php:7 views/configurations/delete.php:7
 msgid "Back to all configurations"
